deploy appimage with sharun

--- a/.github/workflows/appimage_continuous.yml
+++ b/.github/workflows/appimage_continuous.yml
@@ -17,9 +17,9 @@ jobs:
       matrix:
         os:
           # x86_64 (https://github.com/actions/runner-images/tree/main/images/ubuntu)
-          - { arch: x86_64, label: ubuntu-22.04 }
+          - { arch: x86_64, label: ubuntu-latest }
           # ARM64 (https://github.com/actions/partner-runner-images)
-          - { arch: aarch64, label: ubuntu-22.04-arm }
+          - { arch: aarch64, label: ubuntu-24.04-arm }
 
     steps:
     - uses: actions/checkout@v4
